--- a/views/classes.hbs
+++ b/views/classes.hbs
@@ -1,5 +1,3 @@
-
-
 <div class="main-panel">
     <div class="content-wrapper">
         <div class="col-12 col-xl-8 mb-4 mb-xl-0">
@@ -7,219 +5,74 @@
             <h6 class="font-weight-normal text-capitalize text-muted">Registered {{school.regdate}}</h6>
             {{!-- <h6 class="font-weight-normal mb-0">All systems are running smoothly!</h6> --}}
         </div>
-        
+
         <div class="container mt-3 p-3 mx-3">
             <a href="" class="btn btn-behance px-3 py-2" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 Add Class
             </a>
-            
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title" id="exampleModalLabel">Add Class</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-            
+
                         <div class="modal-body">
                             <form action="/admin/addclass" class="forms-sample" method="post">
                                 <div class="form-group">
                                     {{!-- <label for="exampleInputName1">Class</label> --}}
-                                    <input type="text" name="class" class="form-control" id="exampleInputName1" placeholder="Add class" />
+                                    <input type="text" name="class" class="form-control" id="exampleInputName1"
+                                        placeholder="Add class" />
                                 </div>
                                 <button type="submit" class="btn btn-primary">
                                     Add Class
                                 </button>
                             </form>
                         </div>
-            
+
                     </div>
                 </div>
             </div>
             <br>
-            
-            
+
+
             <div class="row p-3">
                 {{#if classses}}
 
-                {{!-- <div
-                    class="d-flex flex-fill flex-grow-1 flex-lg-nowrap flex-wrap flex-column justify-content-around align-center align-content-center">
-                    {{#if class1}}
-                    
-                    {{/if}}
-                    {{#if class2}}
-                    <div class="bg-primary px-4 py-3 w-100 rounded-lg text-white mt-3">
-                        <h3 class="font-weight-500">
-                            <a href="/admin/getstudents/class2" class="text-white text-decoration-none">Class Two &#8594;</a>
-                        </h3>
-                        <a href="/admin/getstudents/class2" class="text-white text-decoration-none">
-                            {{class2}} Student(s)&#8594;</a>
-                    </div>
-                    {{/if}}
-                    {{#if class3}}
-                    <div class="bg-dark px-4 py-3 w-100 rounded-lg text-white mt-3">
-                        <h3 class="font-weight-500">
-                            <a href="/admin/getstudents/class3" class="text-white text-decoration-none">Class Three &#8594;</a>
-                        </h3>
-                        <a href="/admin/getstudents/class3" class="text-white text-decoration-none">{{class3}} Student(s) &#8594;</a>
-                    </div>
-                    {{/if}}
-                    {{#if class4}}
-                    <div class="bg-danger px-4 py-3 w-100 rounded-lg text-white mt-3">
-                        <h3 class="font-weight-500">
-                            <a href="/admin/getstudents/class4" class="text-white text-decoration-none">Class Four &#8594;</a>
-                        </h3>
-                        <a href="/admin/getstudents/class4" class="text-white text-decoration-none">{{class4}} Student(s) &#8594;</a>
-                    </div>
-                    {{/if}}
-                    {{#if class5}}
-                    <div class="bg-warning px-4 py-3 w-100 rounded-lg text-white mt-3">
-                        <h3 class="font-weight-500">
-                            <a href="/admin/getstudents/class5" class="text-white text-decoration-none">Class Five &#8594;</a>
-                        </h3>
-                        <a href="/admin/getstudents/class5" class="text-white text-decoration-none">{{class5}} Student(s) &#8594;</a>
-                    </div>
-                    {{/if}}
-                    {{#if class6}}
-                    <div class="bg-dribbble px-4 py-3 w-100 rounded-lg text-white mt-3">
-                        <h3 class="font-weight-500">
-                            <a href="/admin/getstudents/class6" class="text-white text-decoration-none">Class Six &#8594;</a>
-                        </h3>
-                        <a href="/admin/getstudents/class6" class="text-white text-decoration-none">{{class6}} Student(s) &#8594;</a>
-                    </div>
-                    {{/if}}
-                    {{#if class7}}
-                    <div class="bg-behance px-4 py-3 w-100 rounded-lg text-white mt-3">
-                        <h3 class="font-weight-500">
-                            <a href="/admin/getstudents/class7" class="text-white text-decoration-none">Class Seven &#8594;</a>
-                        </h3>
-                        <a href="/admin/getstudents/class7" class="text-white text-decoration-none">{{class7}} Student(s) &#8594;</a>
-                    </div>
-                    {{/if}}
-                    {{#if class8}}
-                    <div class="bg-primary px-4 py-3 w-100 rounded-lg text-white mt-3">
-                        <h3 class="font-weight-500">
-                            <a href="/admin/getstudents/class8" class="text-white text-decoration-none">Class Eight &#8594;</a>
-                        </h3>
-                        <a href="/admin/getstudents/class8" class="text-white text-decoration-none">{{class8}} Student(s) &#8594;</a>
-                    </div>
-                    {{/if}}
-                    {{#if class9}}
-                    <div class="bg-success px-4 py-3 w-100 rounded-lg text-white mt-3">
-                        <h3 class="font-weight-500">
-                            <a href="/admin/getstudents/class9" class="text-white text-decoration-none">Class Nine &#8594;</a>
-                        </h3>
-                        <a href="/admin/getstudents/class9" class="text-white text-decoration-none">{{class9}} Student(s)
-                            &#8594;</a>
-                    </div>
-                    {{/if}}
-                    {{#if class10}}
-                    <div class="bg-dark px-4 py-3 w-100 rounded-lg text-white mt-3">
-                        <h3 class="font-weight-500">
-                            <a href="/admin/getstudents/class10" class="text-white text-decoration-none">Class Ten &#8594;</a>
-                        </h3>
-                        <a href="/admin/getstudents/class10" class="text-white text-decoration-none">{{class10}} Student(s)
-                            &#8594;</a>
-                    </div>
-                    {{/if}}
-                    {{#if class11}}
-                    <div class="bg-dark px-4 py-3 w-100 rounded-lg text-white mt-3">
-                        <h3 class="font-weight-500">
-                            <a href="/admin/getstudents/class11" class="text-white text-decoration-none">Class Eleven &#8594;</a>
-                        </h3>
-                        <a href="/admin/getstudents/class11" class="text-white text-decoration-none">{{class11}} Student(s)
-                            &#8594;</a>
-                    </div>
-                    {{/if}}
-                    {{#if class12}}
-                    <div class="bg-dark px-4 py-3 w-100 rounded-lg text-white mt-3">
-                        <h3 class="font-weight-500">
-                            <a href="/admin/getstudents/class12" class="text-white text-decoration-none">Class Twelve &#8594;</a>
-                        </h3>
-                        <a href="/admin/getstudents/class12" class="text-white text-decoration-none">{{class12}} Student(s)
-                            &#8594;</a>
-                    </div>
-                    {{/if}}
-                    {{#if class13}}
-                    <div class="bg-dark px-4 py-3 w-100 rounded-lg text-white mt-3">
-                        <h3 class="font-weight-500">
-                            <a href="/admin/getstudents/class13" class="text-white text-decoration-none">Class Thirteen &#8594;</a>
-                        </h3>
-                        <a href="/admin/getstudents/class13" class="text-white text-decoration-none">{{class13}} Student(s)
-                            &#8594;</a>
-                    </div>
-                    {{/if}}
-                    {{#if class14}}
-                    <div class="bg-dark px-4 py-3 w-100 rounded-lg text-white mt-3">
-                        <h3 class="font-weight-500">
-                            <a href="/admin/getstudents/class14" class="text-white text-decoration-none">Class Fourteen &#8594;</a>
-                        </h3>
-                        <a href="/admin/getstudents/class14" class="text-white text-decoration-none">{{class14}} Student(s)
-                            &#8594;</a>
-                    </div>
-                    {{/if}}
-                    {{#if class15}}
-                    <div class="bg-dark px-4 py-3 w-100 rounded-lg text-white mt-3">
-                        <h3 class="font-weight-500">
-                            <a href="/admin/getstudents/class15" class="text-white text-decoration-none">Class Fifteen &#8594;</a>
-                        </h3>
-                        <a href="/admin/getstudents/class15" class="text-white text-decoration-none">{{class15}} Student(s)
-                            &#8594;</a>
-                    </div>
-                    {{/if}}
-                    {{#if class16}}
-                    <div class="bg-dark px-4 py-3 w-100 rounded-lg text-white mt-3">
-                        <h3 class="font-weight-500">
-                            <a href="/admin/getstudents/class16" class="text-white text-decoration-none">Class Sixteen &#8594;</a>
-                        </h3>
-                        <a href="/admin/getstudents/class16" class="text-white text-decoration-none">{{class16}} Student(s)
-                            &#8594;</a>
-                    </div>
-                    {{/if}}
-                    {{#if class17}}
-                    <div class="bg-dribbble px-4 py-3 w-100 rounded-lg text-white mt-3">
-                        <h3 class="font-weight-500">
-                            <a href="/admin/getstudents/class17" class="text-white text-decoration-none">Class Seventeen &#8594;</a>
-                        </h3>
-                        <a href="/admin/getstudents/class17" class="text-white text-decoration-none">{{class17}} Student(s)
-                            &#8594;</a>
-                    </div>
-                    {{/if}}
-                    {{#if class18}}
-                    <div class="bg-github px-4 py-3 w-100 rounded-lg text-white mt-3">
-                        <h3 class="font-weight-500">
-                            <a href="/admin/getstudents/class18" class="text-white text-decoration-none">Class Eighteen &#8594;</a>
-                        </h3>
-                        <a href="/admin/getstudents/class18" class="text-white text-decoration-none">{{class18}} Student(s)
-                            &#8594;</a>
-                    </div>
-                    {{/if}}
 
-
-
-
-
-
-                </div> --}}
-
-                    <div class="changebg">
-                        {{#each classses}}
-                        <label class="bgh px-4 py-3 w-100 rounded-lg text-white mt-3">
-                            <h3 class="font-weight-500 cursor-pointer">
-                                <a href="/admin/getstudents/{{idd}}" class="text-white text-decoration-none text-capitalize">{{name}}
-                                    &#8594;</a>
-                            </h3>
-                            <a href="/admin/getstudents/{{idd}}" class="text-white text-decoration-none">
-                                {{students}} Student(s) &#8594;</a>
-                        </label>
-                        {{/each}}
-                    </div>
+                <div class="changebg">
+                    {{#each classses}}
+                    <label class="bgh px-4 py-3 w-100 rounded-lg text-white mt-3">
+                        <h3 class="font-weight-500 cursor-pointer">
+                            <a href="/admin/getstudents/{{idd}}"
+                                class="text-white text-decoration-none text-capitalize">{{name}}
+                                &#8594;</a>
+                        </h3>
+                        <a href="/admin/getstudents/{{idd}}" class="text-white text-decoration-none">
+                            {{students}} Student(s) &#8594;</a>
+                    </label>
+                    {{/each}}
+                </div>
+                <div style="display: flex;justify-content:end;" class="pr-2">
+                    <a style="font-family: cursive;color:red;text-transform:capitalize"
+                        href="/admin/deleteschoolpictures/{{student.userid}}">Delete all
+                        {{school.name}}'s pictures</a>
+                </div>
+                <br>
+                <div style="display: flex;justify-content:end;" class="pr-2">
+                    <a style="font-family: cursive;color:red;text-transform:capitalize"
+                        href="/admin/deleteschool/{{student.userid}}">Delete
+                        {{school.name}}'s account</a>
+                </div>
 
 
 
                 {{else}}
 
-                    <h4 class="text-center">No classes registered yet</h4>
+                <h4 class="text-center">No classes registered yet</h4>
 
                 {{/if}}
             </div>
