--- a/views/layouts/admin.hbs
+++ b/views/layouts/admin.hbs
@@ -171,7 +171,7 @@
                             <span class="menu-title">Dashboard</span>
                         </a>
                     </li>
-                    <li class="nav-item">
+                    {{!-- <li class="nav-item">
                         <a class="nav-link" href="/admin/orders">
                             <i class="icon-shopping-cart menu-icon"></i>
                             <span class="menu-title">Orders</span>
@@ -182,17 +182,23 @@
                             <i class="icon-shopping-bag menu-icon"></i>
                             <span class="menu-title">Packages</span>
                         </a>
-                    </li>
+                    </li> --}}
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false"
                             aria-controls="ui-basic">
                             <i class="icon-school menu-icon"></i>
-                            <span class="menu-title">School</span>
+                            <span class="menu-title">Schools</span>
                             <i class="menu-arrow"></i>
                         </a>
                         <div class="collapse" id="ui-basic">
                             <ul class="nav flex-column sub-menu">
                                 <li class="nav-item"> <a class="nav-link" href="/admin/getschools">Schools</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="collapse" id="ui-basic">
+                            <ul class="nav flex-column sub-menu">
+                                <li class="nav-item"> <a class="nav-link" href="/admin/getalstudents">All Students</a>
                                 </li>
                             </ul>
                         </div>
