--- a/views/login.hbs
+++ b/views/login.hbs
@@ -45,7 +45,7 @@
                     </h1>
                 </div>
                 <div class="contact-form">
-                    <form action="/login" id="loginAccount" method="post">
+                    <form action="/parent/login" id="loginAccount" method="post">
                         <div class="input-bottom" id="name">
                             <p>Username *</p>
                             <input type="text" name="username" id="signSurname" placeholder="e.g Williams" class="input-control"
@@ -56,40 +56,7 @@
                             <input type="text" name="pwrd" id="signSurname" placeholder="Password" class="input-control"
                                 required />
                         </div>
-                        <div class="input-bottom" id="name">
-                            <p>I am :</p>
-                            
-
-                            <select name="iam" id="signSurname" class="input-control" required>
-                                {{!-- <option value="student" selected >A Student</option>
-                                <option value="teacher">A Teacher</option> --}}
-                                <option value="parent" selected>A Parent</option>
-                                {{!-- <option value="photographer">A Photographer</option> --}}
-                                <option value="admin">An Admin</option>
-                            </select>
-                                
-                        </div>
-                        {{!-- <div class="input-bottom">
-                            <p>Email Address *</p>
-                            <input type="text" name="" id="signEmailaddress" placeholder="example@gmail.com" class="input-control"
-                                required />
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="input-bottom">
-                                    <p>Phone Number *</p>
-                                    <input type="text" name="" id="signPhonenumber" placeholder="070 333 444 555" class="input-control"
-                                        required />
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="input-bottom">
-                                    <p>Enter Code *</p>
-                                    <input type="text" name="" id="signCode" placeholder="123 456" class="input-control"
-                                        required />
-                                </div>
-                            </div>
-                        </div> --}}
+                        
                         <div class="btn">
                             <a href="">
                                 <button type="submit" class="btn">Login</button>
@@ -97,6 +64,9 @@
                         </div>
                     </form>
                     <p>Don't have an account yet?<a href="/signuppage" >Signup now</a></p>
+                    <br>
+                    {{!-- <span>Or</span> --}}
+                    <a href="/adminloginpage" >Login as admin</a></p>
                 </div>
             </div>
         </section>
