--- a/views/signuppage.hbs
+++ b/views/signuppage.hbs
@@ -72,21 +72,18 @@
                             class="input-control" required />
                     </div>
                     <div class="row">
-                        <div class="col-md-4">
-                            <div class="input-bottom">
-                                <p>Phone Number *</p>
-                                <input type="text" name="phone" id="signPhonenumber" placeholder="070 333 444 555"
-                                    class="input-control" required />
-                            </div>
+                        <div class="input-bottom">
+                            <p>Phone Number *</p>
+                            <input type="text" name="phone" id="signPhonenumber" placeholder="070 333 444 555" class="input-control" required />
                         </div>
                         
-                        <div class="col-md-4">
+                        {{!-- <div class="col-md-4">
                             <div class="input-bottom">
                                 <p>Reference Code *</p>
                                 <input type="text" name="href" id="signCode" placeholder="123 456" class="input-control"
                                     required />
                             </div>
-                        </div>
+                        </div> --}}
                     </div>
                     <div class="btn">
 
